changed the victory screen's wording to be more complementary, fixed the colors of the texts to be more readable

--- a/src/components/win-modal/win-modal.styles.scss
+++ b/src/components/win-modal/win-modal.styles.scss
@@ -72,7 +72,7 @@
   .modal-header {
     padding: 0.1rem;
     // color: #ffff00;
-    color: var(--secondaryText);
+    color: var(--title);
     font-size: 2rem;
 
     // 3D hover
@@ -89,12 +89,12 @@
 
     // 3D hover
     transform: translateZ(40px);
-    text-shadow: rgba(0, 0, 0, 0.2) 5px 5px 10px;
+    text-shadow: rgba(0, 0, 0, 0.3) 2px 2px 10px;
 
     span {
       padding: 0.3rem;
       // color: #ffff00;
-      color: var(--primaryText);
+      color: var(--title);
     }
   }
 
